# birthdayculator-python

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml  test.py
.github/: settings.yml
.github/workflows/: codeql-analysis.yml  dependabot-automerge.yml  dependabot-metadata.yml  publish-to-pypi.yml  release-please.yml  test.yml
birthdayculator/: add.py  age_calculation.py  delta_calculation.py  input_conversion.py  next_birthday_calculation.py
birthdayculator/stubs/assertpy/: __init__.pyi  base.pyi  collection.pyi  contains.pyi  date.pyi  dynamic.pyi  exception.pyi  extracting.pyi  file.pyi  numeric.pyi  snapshot.pyi  string.pyi
birthdayculator/stubs/dateutil/: relativedelta.pyi
tests/: conftest.py  test_age_calculation.py  test_delta_calculation.py  test_next_birthday_calculation.py  test_stuff.py  utils_test.py
